fix minor spacing issues

--- a/openmetadata-ui/src/main/resources/ui/src/components/NavBar/nav-bar.less
+++ b/openmetadata-ui/src/main/resources/ui/src/components/NavBar/nav-bar.less
@@ -112,6 +112,7 @@
   background-color: @white;
   border: 1px solid @blue-15;
   color: @text-color;
+  height: 40px;
 
   .domain-text {
     max-width: 15vw;
